--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "base62str": "^1.0.9",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "lodash": "^4.17.21",
     "steamapi": "^2.2.0"
   }
